# chat-weave

./: .gitignore  CLAUDE.md  PLAN.md  README.ko.md  README.md  generate_session_ir.py  pyproject.toml
chatweave/: __init__.py  cli.py
chatweave/extractors/: __init__.py  base.py  heuristic.py
chatweave/io/: __init__.py  ir_writer.py  jsonl_loader.py
chatweave/matchers/: __init__.py  base.py  hash.py
chatweave/models/: __init__.py  conversation.py  qa_unit.py  session.py
chatweave/normalization/: __init__.py  base.py  context.py  passes.py
chatweave/parsers/: __init__.py  base.py  unified.py
chatweave/pipeline/: __init__.py  build_qa_ir.py  build_session_ir.py
chatweave/util/: __init__.py  hashing.py  logging_config.py  platform_inference.py  progress.py  text_normalization.py
docs/: proposed_by_chatgpt.md  proposed_by_claude.md  proposed_by_gemini.md
examples/exceptional/: gemini_gemini-9bb7e72cdfaf8070?hl=ko.json
examples/sample-session/: chatgpt_20251129T114242.jsonl  claude_20251129T114247.jsonl  gemini_20251129T114250.jsonl  grok_20251206T133524.jsonl
examples/sample-session2/: chatgpt_20251208T143513.jsonl  claude_20251208T143735.jsonl  gemini_20251208T143656.jsonl  grok_20251208T143718.jsonl
scripts/: batch_build_ir.py  batch_build_ir.sh
tests/: conftest.py  test_cli.py
tests/extractors/: test_heuristic.py
tests/io/: test_ir_writer.py  test_jsonl_loader.py
tests/matchers/: __init__.py  test_hash.py
tests/models/: test_conversation.py  test_qa_unit.py  test_session.py
tests/normalization/: __init__.py  test_base.py  test_context.py  (+1 more)
(+7 files in other folders)
